# brain_unet

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
brain_unet_app/: README.md  app.py  requirements.txt
checkpoints/: README.md
data/kmeans_masks/Brain Atrophy/: 44274797.npy  44274813.npy  44274829.npy  44274845.npy  44274861.npy  44274877.npy  44274893.npy  44274909.npy  44274925.npy  44274941.npy  44274957.npy  44274973.npy  44274989.npy  44275005.npy  44275021.npy  44275037.npy  44275053.npy  44275069.npy  44275085.npy  44275693.npy  44275709.npy  44275725.npy  44281889.npy  44281905.npy  44281921.npy  44281937.npy  44281953.npy  44281969.npy  44281985.npy  44282001.npy  44282017.npy  44282033.npy  44282049.npy  44282065.npy  44282081.npy  44282097.npy  44282113.npy  44282129.npy  46078492.npy  46078508.npy  (+206 more)
data/kmeans_masks/Brain Infection with abscess/: 58210409.npy  58210425.npy  58210441.npy  58210457.npy  58210473.npy  58210489.npy  58210505.npy  58210521.npy  58210537.npy  58210553.npy  58210569.npy  58210585.npy  58210601.npy  58210617.npy  58210633.npy  58210649.npy  58210665.npy  58210681.npy  58210697.npy  58211321.npy  58211337.npy  58211353.npy  58211369.npy  58211385.npy  58211401.npy  58211417.npy  58211433.npy  58211449.npy  58211465.npy  58211481.npy  58211497.npy  (+45 more)
datasets/: dataset.py
results/: dice_scores.csv
scripts/: 01_preprocess.py  02_cluster_kmeans.py  03_generate_kmeans_masks.py  04_train_unet.py  05_visualize_predictions.py  06_eval_unet_dice.py  07_track_dice_over_epochs.py
(+9536 files in other folders)
